--- a/app/src/main/res/layout/activity_item_drug.xml
+++ b/app/src/main/res/layout/activity_item_drug.xml
@@ -13,10 +13,14 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
 
         <ImageView
             android:id="@+id/imageView5"
@@ -41,6 +45,10 @@
                 android:textSize="15dp"
                 android:textStyle="bold" />
         </LinearLayout>
-
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:background="@color/textBlack"
+            android:layout_height="1dp" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
